// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly (snapshot testing) 1`] = `
<Header
  isLoggedIn={[Function]}
>
  <div
    id="header"
  >
    <div
      id="header-info"
    >
      <span>
        Silent Alexa Header
      </span>
    </div>
    <div
      id="header-controls"
    >
      <LoginControl
        isLoggedIn={[Function]}
        updateAuthenticationInfo={[Function]}
      >
        <LoginButton
          onClick={[Function]}
        >
          <button
            onClick={[Function]}
            type="button"
          >
            <img
              alt="loginImage"
              height="20"
              src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_156x32.png"
              width="106"
            />
          </button>
        </LoginButton>
      </LoginControl>
    </div>
  </div>
</Header>
`;

exports[`renders correctly logout (snapshot testing) 1`] = `
<Header
  isLoggedIn={[Function]}
>
  <div
    id="header"
  >
    <div
      id="header-info"
    >
      <span>
        Silent Alexa Header
      </span>
    </div>
    <div
      id="header-controls"
    >
      <LoginControl
        isLoggedIn={[Function]}
        updateAuthenticationInfo={[Function]}
      >
        <LogoutButton
          onClick={[Function]}
        >
          <button
            onClick={[Function]}
            type="button"
          >
            Logout
          </button>
        </LogoutButton>
      </LoginControl>
    </div>
  </div>
</Header>
`;
